--- a/css/style.css
+++ b/css/style.css
@@ -42,6 +42,20 @@ body {
     left: 40px;
 }
 
-.logo{
+.logo {
     height: 35px;
 }
+
+.heading-primary {
+    color: #fff;
+    text-transform: uppercase;
+}
+
+.heading-primary-main {
+
+}
+
+.heading-primary-sub {
+
+}
+
